syntax = "proto3";
package com.demo.mmo.mmo_server.protocals;

message CS_301{
	int32 roleId =1;
}

message SC_301{
	int32 errorCode=1;
	float selfX = 2;
	float selfY =3;

	message FightInfo{
		float x = 1;
		float y = 2;
		int32 roleId = 3;
	}
	
	repeated FightInfo otherFightinfo = 4;
}

message CS_302{
	float x = 1;
	float y = 2;
	int32 roleId = 3;	
}

message SC_302{
	float x = 1;
	float y = 2;
	int64 time = 3;
	int32 roleId = 4;
}

message SC_303{
	message FightInfo{
		int32 roleId = 1;
		float x = 2;
		float y = 3;
		
	}

	repeated FightInfo fightInfos = 1;
}